2017-08-07  Mathias Bynens  <mathias@qiwi.be>

        Speedometer: Update to modern production Ember version
        https://bugs.webkit.org/show_bug.cgi?id=175278

        Reviewed by Ryosuke Niwa.

        * Speedometer/resources/todomvc/architecture-examples/emberjs/README.md: Added.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/index.html: Made title consistent.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/README.md: Documented build process.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/app/components/.gitkeep: Added.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/app/index.html: Made title consistent.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/app/instance-initializers/global.js: Removed.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/app/models/.gitkeep: Added.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/app/router.js: Update to latest version.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/app/routes/.gitkeep: Added.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/app/services/repo.js: Update to latest version
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/app/styles/app.css: Added.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/app/templates/components/.gitkeep: Added.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/bower.json: Update to latest version.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/config/environment.js: Update to latest version.
        * Speedometer/resources/todomvc/architecture-examples/emberjs/source/dist/*: Added generated files per build instructions.