@@ -60,11 +60,11 @@ UnicodeStrings.instance = null;
 UnicodeStrings.table = {
     "START": "\u{041d}\u{0410}\u{0427}\u{0410}\u{0422}\u{042c}", // НАЧАТЬ
     "TIMING": "\u{0425}\u{0420}\u{041e}\u{041d}\u{041e}\u{041c}\u{0415}\u{0422}\u{0420}\u{0410}\u{0416}", // ХРОНОМЕТРАЖ
-    "TAXI": "\u{0422}\u{0410}\u{041a}\u{0421}\u{0418}", // ТАКСИ
-    "RUNUP": "\u{0412}\u{0417}\u{0411}\u{0415}\u{0416}\u{0410}\u{0422}\u{042c}", // ВЗБЕЖАТЬ
-    "TAKEOFF": "\u{0412}\u{0417}\u{041b}\u{0415}\u{0422}\u{0415}\u{0422}\u{042c}", // ВЗЛЕТЕТЬ
-    "CLIMB": "\u{0412}\u{041e}\u{0417}\u{041d}\u{0415}\u{0421}\u{0422}\u{0418}\u{0421}\u{042c}", // ВОЗНЕСТИСЬ
-    "PATTERN": "\u{041f}\u{0410}\u{0422}\u{0422}\u{0415}\u{0420}\u{041d}", // ПАТТЕРН
+    "TAXI": "\u{0420}\u{0423}\u{041b}\u{0415}\u{041d}\u{0418}\u{0415}", // РУЛЕНИЕ
+    "RUNUP": "\u{0414}\u{0412}\u{0418}\u{0413}\u{0410}\u{0422}\u{0415}\u{041b}\u{042c}-\u{041d}\u{0410}\u{041a}\u{0410}\u{0422}\u{0410}", // ДВИГАТЕЛЬ НАКАТА
+    "TAKEOFF": "\u{0412}\u{0417}\u{041b}\u{0415}\u{0422}", // ВЗЛЕТ
+    "CLIMB": "\u{041f}\u{041e}\u{0414}\u{041d}\u{042f}\u{0422}\u{042c}\u{0421}\u{042f}", // ПОДНЯТЬСЯ
+    "PATTERN": "\u{041a}\u{0420}\u{0423}\u{0413}", // КРУГ
     "LEFT": "\u{041b}\u{0415}\u{0412}\u{042b}\u{0419}", // ЛЕВЫЙ
     "RIGHT": "\u{041f}\u{0420}\u{0410}\u{0412}\u{042b}\u{0419}" // ПРАВЫЙ
 };
