@@ -1,3 +1,14 @@
+2017-08-07  Michael Saboff  <msaboff@apple.com>
+
+        Use more accurate Russian keywords for RexBench/FlightPlanner Unicode mode
+        https://bugs.webkit.org/show_bug.cgi?id=175298
+
+        Reviewed by Saam Barati.
+
+        With the help of Alexey Proskuryakov updated the Russian keywords.
+
+        * RexBench/FlightPlanner/use_unicode.js:
+
 2017-08-07  Mathias Bynens  <mathias@qiwi.be>
 
         Speedometer: Update to modern production Ember version
